[gd_scene load_steps=7 format=3 uid="uid://dmx2xuigcpvt4"]

[ext_resource type="Script" path="res://Main/main.gd" id="1_kvqbk"]
[ext_resource type="AudioStream" uid="uid://bwursmlilvh66" path="res://TestAssets/sin_1000Hz_-3dBFS_3s.wav" id="2_ua62h"]
[ext_resource type="PackedScene" uid="uid://tsojatrwr2oa" path="res://UI/TemporalGraph/TemporalGraphPack.tscn" id="3_a0wpj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvnq8"]
bg_color = Color(0.32549, 0.32549, 0.32549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2qh7"]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 1
border_color = Color(0, 0, 0, 0.619608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eap0f"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_right = 1
border_color = Color(0, 0, 0, 0.619608)

[node name="SpectrumViewer" type="Node"]
script = ExtResource("1_kvqbk")

[node name="Button" type="Button" parent="."]
offset_right = 79.0
offset_bottom = 29.0
text = "Click me!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ua62h")
autoplay = true
bus = &"Record"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TemporalGraphPack" parent="VBoxContainer" instance=ExtResource("3_a0wpj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Controls" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jvnq8")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Controls"]
layout_mode = 2

[node name="CheckBoxes1" type="PanelContainer" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k2qh7")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/CheckBoxes1"]
layout_mode = 2

[node name="ShowOctavesCb" type="CheckBox" parent="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "show octaves"

[node name="ShowNotesCb" type="CheckBox" parent="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "show notes"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Controls/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eap0f")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Controls/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ClarityThrSlider" type="HSlider" parent="VBoxContainer/Controls/HBoxContainer/PanelContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="ClarityThresholdValue" type="Label" parent="VBoxContainer/Controls/HBoxContainer/PanelContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Controls/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
text = "Clarity Threshold"
horizontal_alignment = 1

[connection signal="toggled" from="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer/ShowOctavesCb" to="." method="_on_show_octaves_cb_toggled"]
[connection signal="toggled" from="VBoxContainer/Controls/HBoxContainer/CheckBoxes1/VBoxContainer/ShowNotesCb" to="." method="_on_show_notes_cb_toggled"]
[connection signal="value_changed" from="VBoxContainer/Controls/HBoxContainer/PanelContainer/VBoxContainer2/ClarityThrSlider" to="." method="_on_clarity_thr_slider_value_changed"]
